[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yiheng-forge"
version = "0.1.0"
description = "Unified training framework for multi-modal models"
authors = [{ name = "Yiheng Zhu", email = "gityiheng@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core",
    "omegaconf",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["yiheng_forge*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
markers = [
    "unit: fast CPU-only tests for small functions/classes/modules",
    "integration: tests for multiple modules working together",
    "e2e: full user-facing workflow tests",
    "gpu: tests that require CUDA or GPU-specific behavior",
]
